file(GLOB ERRORCUP_SRC ${CMAKE_CURRENT_SOURCE_DIR}/*.cc)
file(GLOB ERRORCUP_HEADER ${CMAKE_CURRENT_SOURCE_DIR}/*.h)
set(ERRORCUP_INSTALL_FIELS "${ERRORCUP_HEADER}" CACHE INTERNAL "VAR")
set(ERRORCUP_SOURCE_FIELS "${ERRORCUP_SRC}" CACHE INTERNAL "VAR")
add_library(error OBJECT ${ERRORCUP_SRC} ${ERRORCUP_HEADER})
