file(GLOB INTERVAL_SRC ${CMAKE_CURRENT_SOURCE_DIR}/*.cc)
file(GLOB INTERVAL_HEADER ${CMAKE_CURRENT_SOURCE_DIR}/*.h)
set(INTERVAL_INSTALL_FIELS "${INTERVAL_HEADER}" CACHE INTERNAL "VAR")
set(INTERVAL_SOURCE_FIELS "${INTERVAL_SRC}" CACHE INTERNAL "VAR")
add_library(interval OBJECT ${INTERVAL_SRC})
target_include_directories(interval INTERFACE "${CMAKE_CURRENT_SOURCE_DIR}")
target_include_directories(interval PUBLIC "${PROJECT_SOURCE_DIR}/src/vendor/include")
