file(GLOB PROCENV_SRC ${CMAKE_CURRENT_SOURCE_DIR}/*.cc)
file(GLOB PROCENV_HEADER ${CMAKE_CURRENT_SOURCE_DIR}/*.h)
set(PROCENV_INSTALL_FIELS "${PROCENV_HEADER}" CACHE INTERNAL "VAR")
set(PROCENV_SOURCE_FIELS "${PROCENV_SRC}" CACHE INTERNAL "VAR")
add_library(procenv OBJECT ${PROCENV_SRC} ${PROCENV_HEADER})
target_include_directories(procenv INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
