file(GLOB TOOL_FUNC_SRC ${CMAKE_CURRENT_SOURCE_DIR}/*.cc)
file(GLOB TOOL_FUNC_HEADER ${CMAKE_CURRENT_SOURCE_DIR}/*.h)
set(TOOL_FUNC_INSTALL_FIELS "${TOOL_FUNC_HEADER}" CACHE INTERNAL "VAR")
set(TOOL_FUNC_SOURCE_FIELS "${TOOL_FUNC_SRC}" CACHE INTERNAL "VAR")
add_library(tool_func OBJECT ${TOOL_FUNC_SRC})
target_include_directories(tool_func INTERFACE "${CMAKE_CURRENT_SOURCE_DIR}")
target_include_directories(tool_func PUBLIC "${PROJECT_SOURCE_DIR}/src/vendor/include")
