file(GLOB ZTHREAD_SRC ${CMAKE_CURRENT_SOURCE_DIR}/*.cc)
file(GLOB ZTHREAD_HEADER ${CMAKE_CURRENT_SOURCE_DIR}/*.h)
set(ZTHREAD_INSTALL_FIELS "${ZTHREAD_HEADER}" CACHE INTERNAL "VAR")
set(ZTHREAD_SOURCE_FIELS "${ZTHREAD_SRC}" CACHE INTERNAL "VAR")
add_library(zthread OBJECT ${ZTHREAD_SRC} ${ZTHREAD_HEADER})
target_include_directories(zthread INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
